--- a/src/jsonmainwindow.ui
+++ b/src/jsonmainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>1120</width>
     <height>600</height>
    </rect>
   </property>
@@ -61,6 +61,19 @@
       <property name="leftMargin">
        <number>6</number>
       </property>
+      <item>
+       <widget class="QCheckBox" name="showNullCheckBox">
+        <property name="toolTip">
+         <string>展示值为空的null节点</string>
+        </property>
+        <property name="toolTipDuration">
+         <number>8000</number>
+        </property>
+        <property name="text">
+         <string>null</string>
+        </property>
+       </widget>
+      </item>
       <item>
        <widget class="QCheckBox" name="jsonTextWrapCheckBox">
         <property name="toolTip">
